<resources>
    <string name="app_name">Flashcard_Game</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Phan Van Hung</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_listgame">Games</string>
    <string name="menu_hightscore">High Score</string>

    <string name="game_name">Game 1</string>
    <string name="flashcard_count">100</string>

    <string name="About">About</string>
    <string name="Info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="UserName">Phan Van Hung</string>
    <string name="textview">Screen Game 2</string>
    <string name="textview2">Screen game 1</string>


    <string name="question_count">1/12</string>
    <string name="nextcard_button">Next Card</string>

    <!-- Toast string -->
    <string name="check_connection">Please check your connection!</string>
    <string name="button_play">Play Now</string>
    <string name="score">Score: </string>

    <!-- Score dialog -->
    <string name="title">Congratulation!</string>
    <string name="Rank">Rank</string>
    <string name="HightScore">Score</string>
    <string name="userName">Name</string>
    <string name="Gamename">Game</string>
    <string name="high_score">High Score</string>
    <string name="type_your_answer_here">Type your answer here</string>
    <string name="name_hint_text">Name</string>
    <string name="age_hint_text">Age</string>
    <string name="save_button">Save</string>
    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="SAVE">SAVE</string>
    <string name="a11y_plant_item_image">Picture of Game</string>
    <string name="please_wait">Please wait</string>

</resources>
