<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ccvn.flashcard_game.views.ScoreFragment">

    <LinearLayout
        android:weightSum="7"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/tv_rank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#08B9CE"
            android:text="@string/Rank"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <TextView
            android:layout_weight="1.4"
            android:id="@+id/tv_score"
            android:textSize="20sp"
            android:padding="5dp"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/HightScore"
            android:layout_gravity="start"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:textSize="20sp"
            android:layout_weight="2"
            android:id="@+id/tv_gamename"
            android:text="@string/Gamename"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:textSize="20sp"
            android:layout_weight="2.6"
            android:id="@+id/tv_userName"
            android:text="@string/userName"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hight_score_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutAnimation="@anim/layout_animation_slide_from_right"
        >
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>
